deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deploy
  labels:
    app: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: fe-pod
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-img
          image: gcr.io/malyadri-410908/sample-react:14
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
