deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  labels:
    app: frontend-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
      app: frontend
